# tech-polarity-backend

./: main.py  pyproject.toml
